[tool.poetry]
name = "timewarrior-teamwork"
version = "0.1.2"
description = "TimeWarrior plugin for integration with Teamwork"
authors = ["Braden Mars <bradenmars@bradenmars.me>"]
packages = [
    { include = "twtw" }
]


[tool.poetry.scripts]
twtw = 'twtw.cli:app'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
python-dotenv = "^0.13.0"
python-dateutil = "^2.8.1"
rich = "^10.7.0"
dpath = "^2.0.1"
click = "^7.1.2"
boltons = "^20.2.1"
sh = "^1.14.1"
typer = "^0.3.2"
attrs = "^21.2.0"
devtools = "^0.6.1"
GitPython = "^3.1.18"
typing-extensions = "^3.10.0"
tinydb = "^4.5.1"
taskw = "^1.3.0"
pydantic = "^1.8.2"
future-typing = "^0.4.1"
tinydb-serialization = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
ward = "^0.63.0-beta.0"
pre-commit = "^2.14.0"
autoflake = "^1.4"


[tool.dephell.main]
from = {format = "poetry", path="pyproject.toml"}
to = {format = "setuppy", path="setup.py"}

[tool.ward]
path = ["tests"]  # supply multiple paths using a list

[build-system]
requires = ["poetry>=0.12", "setuptools!=50.0", "wheel"]
build-backend = "poetry.masonry.api"
