[tool.poetry]
name = "timewarrior-teamwork"
version = "0.1.2"
description = "TimeWarrior plugin for integration with Teamwork"
authors = ["Braden Mars <bradenmars@bradenmars.me>"]
packages = [
    { include = "twtw" }
]


[tool.poetry.scripts]
twtw = 'twtw.cli:app'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.23.0"
python-dotenv = "^0.13.0"
python-dateutil = "^2.8.1"
rich = "^12.5.1"
dpath = "^2.0.1"
click = "^8.1.3"
boltons = "^20.2.1"
sh = "^1.14.1"
typer = {version = "^0.6.1", extras = ["all"]}
attrs = "^22.1.0"
devtools = "^0.6.1"
GitPython = "^3.1.27"
typing-extensions = "^4.3.0"
tinydb = "^4.5.1"
taskw = "^2.0.0"
pydantic = "^1.9.1"
future-typing = "^0.4.1"
tinydb-serialization = "^2.1.0"
orjson = "^3.6.3"
httpx = "^0.19.0"
questionary = "^1.10.0"
Mako = "^1.1.5"
transitions = "^0.8.11"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.9.3"
pre-commit = "^2.14.0"
autoflake = "^1.4"
ward = "^0.66.1-beta.0"
rope = "^1.3.0"
mypy = "^0.971"


[tool.ward]
path = ["tests"]  # supply multiple paths using a list


[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py310']
include = '\.pyi?$'
exclude = '''/(\.eggs|\.mpy_cache|\.direnv|build|dist|snippets)/'''

[tool.isort]
profile = "black"
src_paths = ["twtw", "tests"]
line_length = 100
honor_noqa = true

[tool.pydantic-mypy]
warn-untyped-fields = true

[tool.pydantic-pycharm-plugin]
ignore-init-method-arguments = true

[tool.mypy]
plugins = "pydantic.mypy,tinydb.mypy_plugin"
disallow_untyped_defs = true
follow_imports = "normal"

[build-system]
requires = ['poetry-core']
build-backend = "poetry.core.masonry.api"
